feat: update UI

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "@nuxt/image": "^1.0.0-rc.1",
     "@pinia/nuxt": "^0.4.11",
+    "lucide-vue-next": "^0.460.0",
     "pinia": "^2.1.6",
-    "swiper": "^10.2.0"
+    "vue-carousel": "^0.18.0",
+    "vue3-carousel": "^0.8.0"
   }
 }
